# openarm_ros2

./: .clang-format  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.docker/: Dockerfile  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yml  release.yaml
dev/: README.md  release.sh
openarm/: CMakeLists.txt  package.xml
openarm_bimanual_bringup/: CMakeLists.txt  package.xml
openarm_bimanual_bringup/config/: controllers.yaml
openarm_bimanual_bringup/launch/: depth_camera.launch.py  start_teleop.launch.py
openarm_bimanual_description/: CMakeLists.txt  package.xml
openarm_bimanual_description/launch/: description.launch.py  display.launch.py  display_xacro.launch.py  gazebo.launch.py  kirigirisu.launch.py
openarm_bimanual_description/meshes/: link1.stl  link3.stl  link7_leftarm.stl  right_jaw.stl
openarm_bimanual_description/rviz/: robot_description.rviz
openarm_bimanual_description/scripts/: joint_state_merger.py
openarm_bimanual_description/urdf/: openarm.xacro  openarm_bimanual.urdf  openarm_bimanual.urdf.xacro  openarm_bimanual_sensors.xacro  openarm_bimanual_wrapper.urdf.xacro  openarm_pedestal.urdf
openarm_bimanual_description/worlds/: cars_and_trees.sdf
openarm_bimanual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
openarm_bimanual_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  openarm_bimanual.ros2_control.xacro  openarm_bimanual.srdf  openarm_bimanual.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
openarm_bimanual_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  (+1 more)
openarm_bimanual_teleop/: CMakeLists.txt  package.xml
openarm_bringup/: CMakeLists.txt  README.md  package.xml
openarm_description/: CMakeLists.txt  package.xml
openarm_grip_description/: package.xml  setup.cfg  setup.py
openarm_hardware/: CMakeLists.txt  openarm_hardware.xml  package.xml  setup.bash
openarm_hardware/include/openarm_hardware/: .openarm_hardware.hpp.swp  canbus.hpp  motor.hpp  motor_control.hpp  openarm_hardware.hpp  v10_simple_hardware.hpp  visibility_control.h
openarm_hardware/src/: .openarm_hardware.cpp.swp  canbus.cpp  motor.cpp  motor_control.cpp  openarm_hardware.cpp  v10_simple_hardware.cpp
openarm_hardware/test/: test_openarm_hardware.cpp
openarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
openarm_mujoco_hardware/: CMakeLists.txt  README.md  openarm_mujoco_hardware.xml  package.xml
openarm_two_arms/: package.xml
overcross/: openarm_controllers.yaml  robot_meta.xml
(+97 files in other folders)
