<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarm</name>
  <version>0.3.0</version>
  <description>Metapackage for OpenArm</description>
  <maintainer email="t95zhou@uwaterloo.ca">Thomason Zhou</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>openarm_bimanual_bringup</exec_depend>
  <exec_depend>openarm_bimanual_description</exec_depend>
  <exec_depend>openarm_bimanual_moveit_config</exec_depend>
  <exec_depend>openarm_bimanual_teleop</exec_depend>
  <exec_depend>openarm_bringup</exec_depend>
  <exec_depend>openarm_description</exec_depend>
  <exec_depend>openarm_hardware</exec_depend>
  <exec_depend>openarm_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
